Streamline server code